--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="/antecedentesP.html">Antecedentes policia</a></li>
                 <li><a href="/antecedentesC.html">Antecedentes Contraloria</a></li>
-                <li><a href="/antecedentesPr.html">Antecedentes Procuraduraria</a></li>
-                <li><a href="/sisben.html">Sisben</a></li>
+                <li><a href="C:\Users\jeff6\OneDrive\Documentos\pagcertificados\antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                <li><a href="C:\Users\jeff6\OneDrive\Documentos\pagcertificados\sisben.html">Sisben</a></li>
                 <li><a href="/adres.html">Adres o Fosyga</a></li>
                 <li><a href="/ruaf.html">Ruaf</a></li>
             </ul>
