--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
         <a href="/ruaf.html"><img class="slider-img" src="C:\Users\jeff6\OneDrive\Documentos\pagcertificados\img\slider\ruaf.png" alt="Slider Image 6"></a>
     </div>
 </body>
-<script src="JavaScript\scripts.js"></script>
+<script src="C:\Users\jeff6\OneDrive\Documentos\pagcertificados\JavaScript\scripts.js"></script>
 </html>
