--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificados</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header>
@@ -14,12 +14,12 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="antecedentesP.html">Antecedentes policia</a></li>
-                <li><a href="antecedentesC.html">Antecedentes Contraloria</a></li>
-                <li><a href="antecedentesPr.html">Antecedentes Procuraduraria</a></li>
-                <li><a href="sisben.html">Sisben</a></li>
-                <li><a href="adres.html">Adres o Fosyga</a></li>
-                <li><a href="ruaf.html">Ruaf</a></li>
+                <li><a href="/antecedentesP.html">Antecedentes policia</a></li>
+                <li><a href="/antecedentesC.html">Antecedentes Contraloria</a></li>
+                <li><a href="/antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                <li><a href="/sisben.html">Sisben</a></li>
+                <li><a href="/adres.html">Adres o Fosyga</a></li>
+                <li><a href="/ruaf.html">Ruaf</a></li>
             </ul>
             <div class="menu-toggle" onclick="toggleMenu()">
                 ☰
@@ -30,13 +30,13 @@
 
 
     <div class="slider">
-        <a href="antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesP.png" alt="Slider Image 1"></a> 
-        <a href="antecedentesPr.html"><img class="slider-img" src="img/slider/AntecedentesP.jpg" alt="Slider Image 2"></a> 
-        <a href="antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesC.png" alt="Slider Image 3"></a>
-        <a href="sisben.html"><img class="slider-img" src="img/slider/sisben.png" alt="Slider Image 4"></a> 
-        <a href="adres.html"><img class="slider-img" src="img/slider/adres.png" alt="Slider Image 5"></a>
-        <a href="ruaf.html"><img class="slider-img" src="img/slider/ruaf.png" alt="Slider Image 6"></a>
+        <a href="/antecedentesP.html"><img class="slider-img" src="/img/slider/antecedentesP.png" alt="Slider Image 1"></a> 
+        <a href="/antecedentesPr.html"><img class="slider-img" src="/img/slider/AntecedentesP.jpg" alt="Slider Image 2"></a> 
+        <a href="/antecedentesP.html"><img class="slider-img" src="/img/slider/antecedentesC.png" alt="Slider Image 3"></a>
+        <a href="/sisben.html"><img class="slider-img" src="/img/slider/sisben.png" alt="Slider Image 4"></a> 
+        <a href="/adres.html"><img class="slider-img" src="/img/slider/adres.png" alt="Slider Image 5"></a>
+        <a href="/ruaf.html"><img class="slider-img" src="/img/slider/ruaf.png" alt="Slider Image 6"></a>
     </div>
 </body>
-<script src="JavaScript/scripts.js"></script>
+<script src="/JavaScript/scripts.js"></script>
 </html>
