--- a/ruaf.html
+++ b/ruaf.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruaf</title>
-    <link rel="stylesheet" href="/css/styleejercicios.css">
+    <link rel="stylesheet" href="css/styleejercicios.css">
 </head>
 <body>
     <header>
