--- a/antecedentesC.html
+++ b/antecedentesC.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antecedentes Contraloria</title>
-    <link rel="stylesheet" href="/css/styleejercicios.css">
+    <link rel="stylesheet" href="css/styleejercicios.css">
 </head>
 <body>
     <header>
@@ -14,12 +14,12 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/antecedentesP.html">Antecedentes policia</a></li>
+                    <li><a href="antecedentesP.html">Antecedentes policia</a></li>
                     <li><a href="#">Antecedentes Contraloria</a></li>
-                    <li><a href="/antecedentesPr.html">Antecedentes Procuraduraria</a></li>
-                    <li><a href="/sisben.html">Sisben</a></li>
-                    <li><a href="/adres.html">Adres o Fosyga</a></li>
-                    <li><a href="/ruaf.html">Ruaf</a></li>
+                    <li><a href="antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                    <li><a href="sisben.html">Sisben</a></li>
+                    <li><a href="adres.html">Adres o Fosyga</a></li>
+                    <li><a href="ruaf.html">Ruaf</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,17 +30,17 @@
             <h3>paso 1.</h3>
             <h3>Abre la pagina <a href="https://www.contraloria.gov.co/control-fiscal/responsabilidad-%20fiscal/certificado-de-%20antecedentes-fiscales" target="_blank">https://www.contraloria.gov.co/control-fiscal/responsabilidad-%20fiscal/certificado-de-%20antecedentes-fiscales</a>.</h3>
             <h3>paso 2.<br><br> Bajas la pagina y haz click en "Certificado Persona Natural"</h3>
-            <img src="/img/pics/capC1.png" height="600px" width="1000px">
+            <img src="img/pics/capC1.png" height="600px" width="1000px">
             <h3>paso 3.<br>Se selecciona el tipo de documento del cliente(se observa en numero 1)<br>Después se ingresa el número de documento (se observa en numero 2)<br>Después se da click en el cuadro que aparece en el número 3<br>por ultimo se da click en "Buscar" (se evidencia en numero 4)</h3>
-            <img src="/img/pics/capC2.png" height="600px" width="1000px">
+            <img src="img/pics/capC2.png" height="600px" width="1000px">
             <h3>Paso 4.<br>Después se abre el documento señalado, se le da doble click o en donde dice "abrir archivo"</h3>
-            <img src="/img/pics/capC3.png" height="600px" width="1000px">
+            <img src="img/pics/capC3.png" height="600px" width="1000px">
             <h3>Paso 5.<br>Después da click en imprimir</h3>
-            <img src="/img/pics/capC4.png" height="600px" width="1000px">
+            <img src="img/pics/capC4.png" height="600px" width="1000px">
             <h3>Paso 6.<br>Despues se elije entre blanco y negro o color dependiendo de la preferencia del cliente <br>por ultimo se da click en imprimir </h3>
-            <img src="/img/pics/capC5.png" height="600px" width="1000px">
+            <img src="img/pics/capC5.png" height="600px" width="1000px">
         </section>
     </main>  
 </body>
-<script src="/JavaScript/scripts.js"></script>
+<script src="JavaScript/scripts.js"></script>
 </html>
