--- a/antecedentesP.html
+++ b/antecedentesP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antecedentes Policia</title>
-    <link rel="stylesheet" href="/css/styleejercicios.css">
+    <link rel="stylesheet" href="css/styleejercicios.css">
 </head>
 <body>
     <header>
@@ -15,11 +15,11 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Antecedentes policia</a></li>
-                    <li><a href="/antecedentesC.html">Antecedentes Contraloria</a></li>
-                    <li><a href="/antecedentesPr.html">Antecedentes Procuraduraria</a></li>
-                    <li><a href="/sisben.html">Sisben</a></li>
-                    <li><a href="/adres.html">Adres o Fosyga</a></li>
-                    <li><a href="/ruaf.html">Ruaf</a></li>
+                    <li><a href="antecedentesC.html">Antecedentes Contraloria</a></li>
+                    <li><a href="antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                    <li><a href="sisben.html">Sisben</a></li>
+                    <li><a href="adres.html">Adres o Fosyga</a></li>
+                    <li><a href="ruaf.html">Ruaf</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,24 +30,24 @@
             <h3>paso 1.</h3>
             <h3>Abre la pagina <a href="https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml" target="_blank">https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml</a>.</h3>
             <h3>paso 2.<br><br> Haz click en "Acepto" y después en el botón "Enviar"</h3>
-            <img src="/img/pics/antecententesPp1.png" height="400px" width="1000px">
+            <img src="img/pics/antecententesPp1.png" height="400px" width="1000px">
             <h3>paso 3.<br>Se selecciona el tipo de documento del cliente(se observa en numero 1)<br>Después se ingresa el número de documento (se observa en numero 2)<br>Después se da click en el cuadro que aparece en el número 3<br>por ultimo se da click en "consultar" (se evidencia en numero 4)</h3>
-            <img src="/img/pics/antecedetendesPp2.png" height="400px" width="1000px">
+            <img src="img/pics/antecedetendesPp2.png" height="400px" width="1000px">
             <h3>Paso 4.<br>Después se toma captura de pantalla con la tecla "Impr pant" que está en el teclado</h3>
-            <img src="/img/pics/tecla.jpeg" height="400px" width="500px">
+            <img src="img/pics/tecla.jpeg" height="400px" width="500px">
             <h3>Paso 5.<br>Después se selecciona en pantalla el cuadro donde aparecen los datos <br>Ejemplo:</h3>
-            <img src="/img/pics/ejempcap.png" height="400px" width="700px">
+            <img src="img/pics/ejempcap.png" height="400px" width="700px">
             <h3>Paso 6.<br>Despues de tomar la captura de pantalla, aparece esto, se le da click al cuadro que aparece</h3>
-            <img src="/img/pics/cap1.png" height="600px" width="1000px">
+            <img src="img/pics/cap1.png" height="600px" width="1000px">
             <h3>Paso 7.<br>Después de abierto aparece esto, se le da click a esos 3 puntos que aparecen</h3>
-            <img src="/img/pics/cap2.png" height="600px" width="1000px">
+            <img src="img/pics/cap2.png" height="600px" width="1000px">
             <h3>Paso 8.<br>Después aparece esto, se le da click en "imprimir"</h3>
-            <img src="/img/pics/cap3.png" height="600px" width="1000px">
+            <img src="img/pics/cap3.png" height="600px" width="1000px">
             <h3>Paso 9.<br>Por ultimo aparece esto y se selecciona el tipo de papel (se evidencia en numero 1) después se selecciona "imprimir" (se evidencia en numero 2)</h3>
-            <img src="/img/pics/cap4.png" height="600px" width="1000px">
+            <img src="img/pics/cap4.png" height="600px" width="1000px">
         </section>
     </main>  
 </body>
-<script src="/JavaScript/scripts.js"></script>
+<script src="JavaScript/scripts.js"></script>
 </html>
 
