--- a/index.html
+++ b/index.html
@@ -14,29 +14,26 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="/antecedentesP.html">Antecedentes policia</a></li>
-                <li><a href="/antecedentesC.html">Antecedentes Contraloria</a></li>
-                <li><a href="/antecedentesPr.html">Antecedentes Procuraduraria</a></li>
-                <li><a href="/sisben.html">Sisben</a></li>
-                <li><a href="/adres.html">Adres o Fosyga</a></li>
-                <li><a href="/ruaf.html">Ruaf</a></li>
+                <li><a href="antecedentesP.html">Antecedentes Policía</a></li>
+                <li><a href="antecedentesC.html">Antecedentes Contraloría</a></li>
+                <li><a href="antecedentesPr.html">Antecedentes Procuraduría</a></li>
+                <li><a href="sisben.html">Sisben</a></li>
+                <li><a href="adres.html">Adres o Fosyga</a></li>
+                <li><a href="ruaf.html">Ruaf</a></li>
             </ul>
-            <div class="menu-toggle" onclick="toggleMenu()">
-                ☰
-            </div>
         </nav>
     </div>
-</header>
+  </header>
 
+  <div class="slider">
+    <a href="/antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesP.png" alt="Antecedentes Policía"></a> 
+    <a href="/antecedentesPr.html"><img class="slider-img" src="img/slider/AntecedentesP.jpg" alt="Antecedentes Procuraduría"></a> 
+    <a href="/antecedentesC.html"><img class="slider-img" src="img/slider/antecedentesC.png" alt="Antecedentes Contraloría"></a>
+    <a href="/sisben.html"><img class="slider-img" src="img/slider/sisben.png" alt="Sisben"></a> 
+    <a href="/adres.html"><img class="slider-img" src="img/slider/adres.png" alt="Adres o Fosyga"></a>
+    <a href="/ruaf.html"><img class="slider-img" src="img/slider/ruaf.png" alt="Ruaf"></a>
+  </div>
 
-    <div class="slider">
-        <a href="/antecedentesP.html"><img class="slider-img" src="/img/slider/antecedentesP.png" alt="Slider Image 1"></a> 
-        <a href="/antecedentesPr.html"><img class="slider-img" src="/img/slider/AntecedentesP.jpg" alt="Slider Image 2"></a> 
-        <a href="/antecedentesP.html"><img class="slider-img" src="/img/slider/antecedentesC.png" alt="Slider Image 3"></a>
-        <a href="/sisben.html"><img class="slider-img" src="/img/slider/sisben.png" alt="Slider Image 4"></a> 
-        <a href="/adres.html"><img class="slider-img" src="/img/slider/adres.png" alt="Slider Image 5"></a>
-        <a href="/ruaf.html"><img class="slider-img" src="/img/slider/ruaf.png" alt="Slider Image 6"></a>
-    </div>
+  <script src="JavaScript/scripts.js"></script>
 </body>
-<script src="/JavaScript/scripts.js"></script>
 </html>
