--- a/adres.html
+++ b/adres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adres o Fosyga</title>
-    <link rel="stylesheet" href="/css/styleejercicios.css">
+    <link rel="stylesheet" href="css/styleejercicios.css">
 </head>
 <body>
     <header>
@@ -14,12 +14,12 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/antecedentesP.html">Antecedentes policia</a></li>
-                    <li><a href="/antecedentesC.html">Antecedentes Contraloria</a></li>
-                    <li><a href="/antecedentesPr.html">Antecedentes Procuraduraria</a></li>
-                    <li><a href="/sisben.html">Sisben</a></li>
+                    <li><a href="antecedentesP.html">Antecedentes policia</a></li>
+                    <li><a href="antecedentesC.html">Antecedentes Contraloria</a></li>
+                    <li><a href="antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                    <li><a href="sisben.html">Sisben</a></li>
                     <li><a href="#">Adres o Fosyga</a></li>
-                    <li><a href="/ruaf.html">Ruaf</a></li>
+                    <li><a href="ruaf.html">Ruaf</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,16 +30,16 @@
             <h3>paso 1.</h3>
             <h3>Abre la pagina <a href="https://www.adres.gov.co/consulte-su-eps" target="_blank">https://www.adres.gov.co/consulte-su-eps</a>.</h3>
             <h3>paso 2.<br>Se baja la pagina hasta encontrar esto (a veces tarda en cargar)<br><br>Se selecciona el tipo del documento del cliente (número 1)<br><br>Después se ingresa el npumero de documento (número 2)<br><br> Despues se ingresa el codigo que aparece en la imagen rara en el cuadro señalado (número 3)<br><br>Por ultimo de da click en "Consultar"</h3>
-            <img src="/img/pics/capA1.png" height="600px" width="1000px">
+            <img src="img/pics/capA1.png" height="600px" width="1000px">
             <h3>paso 3.<br>Aparece esto y se le da click en "imprimir"</h3>
-            <img src="/img/pics/capA2.png" height="600px" width="1000px">
+            <img src="img/pics/capA2.png" height="600px" width="1000px">
             <h3>Paso 4.<br>Aparece esto y se selecciona si es a color o a blanco y negro (número 1)<br><br>Después se pregunta al cliente si en doble cara o en 2 hojas a parte, si el cliente dice que en 2 hojas, se da click en imprimir, si no se da click en el número 2 señalado</h3>
-            <img src="/img/pics/capA3.png" height="600px" width="1000px">
+            <img src="img/pics/capA3.png" height="600px" width="1000px">
             <h3>Paso 5.<br>Después se selecciona "imprimir por ambas caras orientación vertical"(número 1)<br><br>Por ultimo se da click en "Imprimir"</h3>
-            <img src="/img/pics/capA4.png" height="600px" width="1000px">
+            <img src="img/pics/capA4.png" height="600px" width="1000px">
 
         </section>
     </main>  
 </body>
-<script src="/JavaScript/scripts.js"></script>
+<script src="JavaScript/scripts.js"></script>
 </html>
