--- a/adres.html
+++ b/adres.html
@@ -14,9 +14,9 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="antecedentesP.html">Antecedentes policia</a></li>
-                    <li><a href="antecedentesC.html">Antecedentes Contraloria</a></li>
-                    <li><a href="antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                    <li><a href="antecedentesP.html">Antecedentes Policía</a></li>
+                    <li><a href="antecedentesC.html">Antecedentes Contraloría</a></li>
+                    <li><a href="antecedentesPr.html">Antecedentes Procuraduría</a></li>
                     <li><a href="sisben.html">Sisben</a></li>
                     <li><a href="#">Adres o Fosyga</a></li>
                     <li><a href="ruaf.html">Ruaf</a></li>
@@ -27,19 +27,38 @@
     <main>
         <section id="instrucciones">
             <h2>Instrucciones</h2>
-            <h3>paso 1.</h3>
-            <h3>Abre la pagina <a href="https://www.adres.gov.co/consulte-su-eps" target="_blank">https://www.adres.gov.co/consulte-su-eps</a>.</h3>
-            <h3>paso 2.<br>Se baja la pagina hasta encontrar esto (a veces tarda en cargar)<br><br>Se selecciona el tipo del documento del cliente (número 1)<br><br>Después se ingresa el npumero de documento (número 2)<br><br> Despues se ingresa el codigo que aparece en la imagen rara en el cuadro señalado (número 3)<br><br>Por ultimo de da click en "Consultar"</h3>
-            <img src="img/pics/capA1.png" height="600px" width="1000px">
-            <h3>paso 3.<br>Aparece esto y se le da click en "imprimir"</h3>
-            <img src="img/pics/capA2.png" height="600px" width="1000px">
-            <h3>Paso 4.<br>Aparece esto y se selecciona si es a color o a blanco y negro (número 1)<br><br>Después se pregunta al cliente si en doble cara o en 2 hojas a parte, si el cliente dice que en 2 hojas, se da click en imprimir, si no se da click en el número 2 señalado</h3>
-            <img src="img/pics/capA3.png" height="600px" width="1000px">
-            <h3>Paso 5.<br>Después se selecciona "imprimir por ambas caras orientación vertical"(número 1)<br><br>Por ultimo se da click en "Imprimir"</h3>
-            <img src="img/pics/capA4.png" height="600px" width="1000px">
-
+            <div class="paso">
+                <h3>Paso 1</h3>
+                <p>Abre la página <a href="https://www.adres.gov.co/consulte-su-eps" target="_blank">https://www.adres.gov.co/consulte-su-eps</a>.</p>
+            </div>
+            <div class="paso">
+                <h3>Paso 2</h3>
+                <p>Se baja la página hasta encontrar esto (a veces tarda en cargar).</p>
+                <p>Se selecciona el tipo del documento del cliente (número 1).</p>
+                <p>Después se ingresa el número de documento (número 2).</p>
+                <p>Después se ingresa el código que aparece en la imagen rara en el cuadro señalado (número 3).</p>
+                <p>Por último se da click en "Consultar".</p>
+                <img src="img/pics/capA1.png" alt="Paso 2" height="600" width="1000">
+            </div>
+            <div class="paso">
+                <h3>Paso 3</h3>
+                <p>Aparece esto y se le da click en "imprimir".</p>
+                <img src="img/pics/capA2.png" alt="Paso 3" height="600" width="1000">
+            </div>
+            <div class="paso">
+                <h3>Paso 4</h3>
+                <p>Aparece esto y se selecciona si es a color o a blanco y negro (número 1).</p>
+                <p>Después se pregunta al cliente si en doble cara o en 2 hojas a parte. Si el cliente dice que en 2 hojas, se da click en imprimir, si no se da click en el número 2 señalado.</p>
+                <img src="img/pics/capA3.png" alt="Paso 4" height="600" width="1000">
+            </div>
+            <div class="paso">
+                <h3>Paso 5</h3>
+                <p>Después se selecciona "imprimir por ambas caras orientación vertical" (número 1).</p>
+                <p>Por último se da click en "Imprimir".</p>
+                <img src="img/pics/capA4.png" alt="Paso 5" height="600" width="1000">
+            </div>
         </section>
-    </main>  
+    </main>
+    <script src="JavaScript/scripts.js"></script>
 </body>
-<script src="JavaScript/scripts.js"></script>
 </html>
