--- a/antecedentesC.html
+++ b/antecedentesC.html
@@ -10,13 +10,13 @@
     <header>
         <div class="container">
             <h1>Certificados</h1>
-            <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
+            <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="antecedentesP.html">Antecedentes policia</a></li>
-                    <li><a href="#">Antecedentes Contraloria</a></li>
-                    <li><a href="antecedentesPr.html">Antecedentes Procuraduraria</a></li>
+                    <li><a href="antecedentesP.html">Antecedentes Policía</a></li>
+                    <li><a href="#">Antecedentes Contraloría</a></li>
+                    <li><a href="antecedentesPr.html">Antecedentes Procuraduría</a></li>
                     <li><a href="sisben.html">Sisben</a></li>
                     <li><a href="adres.html">Adres o Fosyga</a></li>
                     <li><a href="ruaf.html">Ruaf</a></li>
@@ -27,20 +27,39 @@
     <main>
         <section id="instrucciones">
             <h2>Instrucciones</h2>
-            <h3>paso 1.</h3>
-            <h3>Abre la pagina <a href="https://www.contraloria.gov.co/control-fiscal/responsabilidad-%20fiscal/certificado-de-%20antecedentes-fiscales" target="_blank">https://www.contraloria.gov.co/control-fiscal/responsabilidad-%20fiscal/certificado-de-%20antecedentes-fiscales</a>.</h3>
-            <h3>paso 2.<br><br> Bajas la pagina y haz click en "Certificado Persona Natural"</h3>
-            <img src="img/pics/capC1.png" height="600px" width="1000px">
-            <h3>paso 3.<br>Se selecciona el tipo de documento del cliente(se observa en numero 1)<br>Después se ingresa el número de documento (se observa en numero 2)<br>Después se da click en el cuadro que aparece en el número 3<br>por ultimo se da click en "Buscar" (se evidencia en numero 4)</h3>
-            <img src="img/pics/capC2.png" height="600px" width="1000px">
-            <h3>Paso 4.<br>Después se abre el documento señalado, se le da doble click o en donde dice "abrir archivo"</h3>
-            <img src="img/pics/capC3.png" height="600px" width="1000px">
-            <h3>Paso 5.<br>Después da click en imprimir</h3>
-            <img src="img/pics/capC4.png" height="600px" width="1000px">
-            <h3>Paso 6.<br>Despues se elije entre blanco y negro o color dependiendo de la preferencia del cliente <br>por ultimo se da click en imprimir </h3>
-            <img src="img/pics/capC5.png" height="600px" width="1000px">
+            <ol>
+                <li>
+                    <h3>Paso 1</h3>
+                    <p>Abre la página <a href="https://www.contraloria.gov.co/control-fiscal/responsabilidad-%20fiscal/certificado-de-%20antecedentes-fiscales" target="_blank">https://www.contraloria.gov.co/control-fiscal/responsabilidad-%20fiscal/certificado-de-%20antecedentes-fiscales</a>.</p>
+                </li>
+                <li>
+                    <h3>Paso 2</h3>
+                    <p>Baja la página y haz clic en "Certificado Persona Natural".</p>
+                    <img src="img/pics/capC1.png" alt="Paso 2" height="600" width="1000">
+                </li>
+                <li>
+                    <h3>Paso 3</h3>
+                    <p>Selecciona el tipo de documento del cliente (se observa en número 1). Después ingresa el número de documento (se observa en número 2). Luego haz clic en el cuadro que aparece en el número 3 y por último haz clic en "Buscar" (se evidencia en número 4).</p>
+                    <img src="img/pics/capC2.png" alt="Paso 3" height="600" width="1000">
+                </li>
+                <li>
+                    <h3>Paso 4</h3>
+                    <p>Abre el documento señalado, haz doble clic o selecciona "abrir archivo".</p>
+                    <img src="img/pics/capC3.png" alt="Paso 4" height="600" width="1000">
+                </li>
+                <li>
+                    <h3>Paso 5</h3>
+                    <p>Haz clic en imprimir.</p>
+                    <img src="img/pics/capC4.png" alt="Paso 5" height="600" width="1000">
+                </li>
+                <li>
+                    <h3>Paso 6</h3>
+                    <p>Elige entre blanco y negro o color dependiendo de la preferencia del cliente y por último haz clic en imprimir.</p>
+                    <img src="img/pics/capC5.png" alt="Paso 6" height="600" width="1000">
+                </li>
+            </ol>
         </section>
-    </main>  
+    </main>
+    <script src="JavaScript/scripts.js"></script>
 </body>
-<script src="JavaScript/scripts.js"></script>
 </html>
