--- a/antecedentesPr.html
+++ b/antecedentesPr.html
@@ -27,20 +27,37 @@
     <main>
         <section id="instrucciones">
             <h2>Instrucciones</h2>
-            <h3>paso 1.</h3>
-            <h3>Abre la pagina <a href="https://www.procuraduria.gov.co/Pages/Generacion-de-antecedentes.aspx" target="_blank">https://www.procuraduria.gov.co/Pages/Generacion-de-antecedentes.aspx</a>.</h3>
-            <h3>paso 2.<br> Se selecciona el tipo de documento del cliente (cedula de ciudadania o si es extranjero cedula de extranjeria) (número 1)<br><br>después se ingresa el numero de identificación del cliente (número 2)<br><br> después en tipo de certificado se tiene que dejar en ordinario (número 3)<br><br> Después se responde la pregunta que se muestra en pantalla, SIEMPRE VA A SER DIFERENTE LA PREGUNTA, ASÍ QUE HAY QUE ESTAR PENDIENTE SI SE REQUIERE PREGUNTAR AL CLIENTE (número 4)<br><br>Por ultimo se da click en "Generar" (número 5)</h3>
-            <img src="img/pics/capPr1.png" height="600px" width="1000px">
-            <h3>paso 3.<br>Se da click en descargar</h3>
-            <img src="img/pics/capPr2.png" height="600px" width="1000px">
-            <h3>Paso 4.<br>Después se da doble click en el archivo o se le da click en "abrir archivo"</h3>
-            <img src="img/pics/capPr3.png" height="600px" width="1000px">
-            <h3>Paso 5.<br><br>Después se da click en imprimir como se ve en la imagen</h3>
-            <img src="img/pics/capPr4.png" height="600px" width="1000px">
-            <h3>Paso 6<br><br>Despues aparece esto como se ve en la imagen, se selecciona si es a color o a blanco y negro (número 1)<br><br>Por ultimo se da click en imprimir (número 2)</h3>
-            <img src="img/pics/capPr5.png" height="600px" width="1000px">
+            <article>
+                <h3>Paso 1.</h3>
+                <p>Abre la página <a href="https://www.procuraduria.gov.co/Pages/Generacion-de-antecedentes.aspx" target="_blank">https://www.procuraduria.gov.co/Pages/Generacion-de-antecedentes.aspx</a>.</p>
+            </article>
+            <article>
+                <h3>Paso 2.</h3>
+                <p>Se selecciona el tipo de documento del cliente (cédula de ciudadanía o si es extranjero cédula de extranjería) (número 1). Después se ingresa el número de identificación del cliente (número 2). En tipo de certificado se tiene que dejar en ordinario (número 3). Después se responde la pregunta que se muestra en pantalla, SIEMPRE VA A SER DIFERENTE LA PREGUNTA, ASÍ QUE HAY QUE ESTAR PENDIENTE SI SE REQUIERE PREGUNTAR AL CLIENTE (número 4). Por último se da click en "Generar" (número 5).</p>
+                <img src="img/pics/capPr1.png" height="600" width="1000" alt="Paso 2 - Captura de pantalla">
+            </article>
+            <article>
+                <h3>Paso 3.</h3>
+                <p>Se da click en descargar.</p>
+                <img src="img/pics/capPr2.png" height="600" width="1000" alt="Paso 3 - Captura de pantalla">
+            </article>
+            <article>
+                <h3>Paso 4.</h3>
+                <p>Después se da doble click en el archivo o se le da click en "abrir archivo".</p>
+                <img src="img/pics/capPr3.png" height="600" width="1000" alt="Paso 4 - Captura de pantalla">
+            </article>
+            <article>
+                <h3>Paso 5.</h3>
+                <p>Después se da click en imprimir como se ve en la imagen.</p>
+                <img src="img/pics/capPr4.png" height="600" width="1000" alt="Paso 5 - Captura de pantalla">
+            </article>
+            <article>
+                <h3>Paso 6.</h3>
+                <p>Después aparece esto como se ve en la imagen, se selecciona si es a color o a blanco y negro (número 1). Por último se da click en imprimir (número 2).</p>
+                <img src="img/pics/capPr5.png" height="600" width="1000" alt="Paso 6 - Captura de pantalla">
+            </article>
         </section>
     </main>  
+    <script src="JavaScript/scripts.js"></script>
 </body>
-<script src="JavaScript/scripts.js"></script>
 </html>
