--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certificados</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Certificados</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <div class="container">
-        <h1>Certificados</h1>
-        <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="antecedentesP.html">Antecedentes Policía</a></li>
-                <li><a href="antecedentesC.html">Antecedentes Contraloría</a></li>
-                <li><a href="antecedentesPr.html">Antecedentes Procuraduría</a></li>
-                <li><a href="sisben.html">Sisben</a></li>
-                <li><a href="adres.html">Adres o Fosyga</a></li>
-                <li><a href="ruaf.html">Ruaf</a></li>
-            </ul>
-        </nav>
-    </div>
+  <div class="container">
+    <h1>Certificados</h1>
+    <button class="menu-toggle" aria-label="Abrir menú" onclick="toggleMenu()">&#9776;</button>
+    <nav class="menu" aria-label="Menú principal">
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="antecedentesP.html">Antecedentes Policía</a></li>
+        <li><a href="antecedentesC.html">Antecedentes Contraloría</a></li>
+        <li><a href="antecedentesPr.html">Antecedentes Procuraduría</a></li>
+        <li><a href="sisben.html">Sisben</a></li>
+        <li><a href="adres.html">Adres o Fosyga</a></li>
+        <li><a href="ruaf.html">Ruaf</a></li>
+      </ul>
+    </nav>
+  </div>
   </header>
 
   <div class="slider">
-    <a href="/antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesP.png" alt="Antecedentes Policía"></a> 
-    <a href="/antecedentesPr.html"><img class="slider-img" src="img/slider/AntecedentesP.jpg" alt="Antecedentes Procuraduría"></a> 
-    <a href="/antecedentesC.html"><img class="slider-img" src="img/slider/antecedentesC.png" alt="Antecedentes Contraloría"></a>
-    <a href="/sisben.html"><img class="slider-img" src="img/slider/sisben.png" alt="Sisben"></a> 
-    <a href="/adres.html"><img class="slider-img" src="img/slider/adres.png" alt="Adres o Fosyga"></a>
-    <a href="/ruaf.html"><img class="slider-img" src="img/slider/ruaf.png" alt="Ruaf"></a>
+  <a href="/antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesP.png" alt="Certificado de Antecedentes Policía"></a> 
+  <a href="/antecedentesPr.html"><img class="slider-img" src="img/slider/AntecedentesP.jpg" alt="Certificado de Antecedentes Procuraduría"></a> 
+  <a href="/antecedentesC.html"><img class="slider-img" src="img/slider/antecedentesC.png" alt="Certificado de Antecedentes Contraloría"></a>
+  <a href="/sisben.html"><img class="slider-img" src="img/slider/sisben.png" alt="Certificado de Sisben"></a> 
+  <a href="/adres.html"><img class="slider-img" src="img/slider/adres.png" alt="Certificado de Adres o Fosyga"></a>
+  <a href="/ruaf.html"><img class="slider-img" src="img/slider/ruaf.png" alt="Certificado de Ruaf"></a>
   </div>
 
   <script src="JavaScript/scripts.js"></script>
