--- a/ruaf.html
+++ b/ruaf.html
@@ -35,35 +35,35 @@
                 <li>
                     <h3>Paso 2.</h3>
                     <p>Baja la página hasta encontrar el botón de enviar. Haz click en "Acepto" y después en el botón "Enviar".</p>
-                    <img src="img/pics/capR1.png" height="300px" width="500px" alt="Captura de pantalla del paso 2">
+                    <img src="img/pics/capR1.png" style="height: auto; width: 100%;" alt="Captura de pantalla del botón de enviar en el paso 2">
                 </li>
                 <li>
                     <h3>Paso 3.</h3>
                     <p>Se selecciona el tipo de documento del cliente (se observa en número 1). Después se ingresa el número de documento (se observa en número 2). Después se pide al cliente la fecha de expedición del documento (número 3).</p>
-                    <img src="img/pics/capR2.png" height="600px" width="1000px" alt="Captura de pantalla del paso 3">
+                    <img src="img/pics/capR2.png" style="height: auto; width: 100%;" alt="Captura de pantalla del formulario de documento en el paso 3">
                     <p>Como se muestra, se selecciona el año primero (número 1), después el mes (número 2) y por último el día (número 3).</p>
-                    <img src="img/pics/capR3.png" height="600px" width="1000px" alt="Captura de pantalla del paso 3">
+                    <img src="img/pics/capR3.png" style="height: auto; width: 100%;" alt="Captura de pantalla de la selección de fecha en el paso 3">
                     <p>Por último, se da click en "consultar" (número 4).</p>
                 </li>
                 <li>
                     <h3>Paso 4.</h3>
                     <p>Después se da click en imprimir como se muestra en la imagen.</p>
-                    <img src="img/pics/capR4.png" height="300px" width="500px" alt="Captura de pantalla del paso 4">
+                    <img src="img/pics/capR4.png" style="height: auto; width: 100%;" alt="Captura de pantalla del botón de imprimir en el paso 4">
                 </li>
                 <li>
                     <h3>Paso 5.</h3>
                     <p>Después se vuelve a dar click en "imprimir".</p>
-                    <img src="img/pics/capR5.png" height="300px" width="500px" alt="Captura de pantalla del paso 5">
+                    <img src="img/pics/capR5.png" style="height: auto; width: 100%;" alt="Captura de pantalla del botón de imprimir en el paso 5">
                 </li>
                 <li>
                     <h3>Paso 6.</h3>
                     <p>Después se da click donde se indica en la imagen.</p>
-                    <img src="img/pics/capR6.png" height="300px" width="500px" alt="Captura de pantalla del paso 6">
+                    <img src="img/pics/capR6.png" style="height: auto; width: 100%;" alt="Captura de pantalla del botón en el paso 6">
                 </li>
                 <li>
                     <h3>Paso 7.</h3>
                     <p>Después de abierto aparece esto, se selecciona si es a color o a blanco y negro (número 1). Después se da click en "Imprimir" (número 2).</p>
-                    <img src="img/pics/capR8.png" height="300px" width="500px" alt="Captura de pantalla del paso 7">
+                    <img src="img/pics/capR8.png" style="height: auto; width: 100%;" alt="Captura de pantalla de la selección de impresión en el paso 7">
                 </li>
             </ol>
         </section>
