--- a/antecedentesP.html
+++ b/antecedentesP.html
@@ -27,27 +27,54 @@
     <main>
         <section id="instrucciones">
             <h2>Instrucciones</h2>
-            <h3>paso 1.</h3>
-            <h3>Abre la pagina <a href="https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml" target="_blank">https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml</a>.</h3>
-            <h3>paso 2.<br><br> Haz click en "Acepto" y después en el botón "Enviar"</h3>
-            <img src="img/pics/antecententesPp1.png" height="400px" width="1000px">
-            <h3>paso 3.<br>Se selecciona el tipo de documento del cliente(se observa en numero 1)<br>Después se ingresa el número de documento (se observa en numero 2)<br>Después se da click en el cuadro que aparece en el número 3<br>por ultimo se da click en "consultar" (se evidencia en numero 4)</h3>
-            <img src="img/pics/antecedetendesPp2.png" height="400px" width="1000px">
-            <h3>Paso 4.<br>Después se toma captura de pantalla con la tecla "Impr pant" que está en el teclado</h3>
-            <img src="img/pics/tecla.jpeg" height="400px" width="500px">
-            <h3>Paso 5.<br>Después se selecciona en pantalla el cuadro donde aparecen los datos <br>Ejemplo:</h3>
-            <img src="img/pics/ejempcap.png" height="400px" width="700px">
-            <h3>Paso 6.<br>Despues de tomar la captura de pantalla, aparece esto, se le da click al cuadro que aparece</h3>
-            <img src="img/pics/cap1.png" height="600px" width="1000px">
-            <h3>Paso 7.<br>Después de abierto aparece esto, se le da click a esos 3 puntos que aparecen</h3>
-            <img src="img/pics/cap2.png" height="600px" width="1000px">
-            <h3>Paso 8.<br>Después aparece esto, se le da click en "imprimir"</h3>
-            <img src="img/pics/cap3.png" height="600px" width="1000px">
-            <h3>Paso 9.<br>Por ultimo aparece esto y se selecciona el tipo de papel (se evidencia en numero 1) después se selecciona "imprimir" (se evidencia en numero 2)</h3>
-            <img src="img/pics/cap4.png" height="600px" width="1000px">
+            <ol>
+                <li>
+                    <h3>Paso 1</h3>
+                    <p>Abre la página <a href="https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml" target="_blank">https://antecedentes.policia.gov.co:7005/WebJudicial/index.xhtml</a>.</p>
+                </li>
+                <li>
+                    <h3>Paso 2</h3>
+                    <p>Haz click en "Acepto" y después en el botón "Enviar".</p>
+                    <img src="img/pics/antecententesPp1.png" alt="Paso 2" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 3</h3>
+                    <p>Selecciona el tipo de documento del cliente, ingresa el número de documento, marca el cuadro y haz click en "consultar".</p>
+                    <img src="img/pics/antecedetendesPp2.png" alt="Paso 3" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 4</h3>
+                    <p>Toma una captura de pantalla con la tecla "Impr pant" del teclado.</p>
+                    <img src="img/pics/tecla.jpeg" alt="Tecla Impr Pant" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 5</h3>
+                    <p>Selecciona en pantalla el cuadro donde aparecen los datos.</p>
+                    <img src="img/pics/ejempcap.png" alt="Ejemplo de captura" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 6</h3>
+                    <p>Después de tomar la captura de pantalla, haz click en el cuadro que aparece.</p>
+                    <img src="img/pics/cap1.png" alt="Paso 6" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 7</h3>
+                    <p>Haz click en los tres puntos que aparecen.</p>
+                    <img src="img/pics/cap2.png" alt="Paso 7" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 8</h3>
+                    <p>Haz click en "imprimir".</p>
+                    <img src="img/pics/cap3.png" alt="Paso 8" class="step-image">
+                </li>
+                <li>
+                    <h3>Paso 9</h3>
+                    <p>Selecciona el tipo de papel y haz click en "imprimir".</p>
+                    <img src="img/pics/cap4.png" alt="Paso 9" class="step-image">
+                </li>
+            </ol>
         </section>
     </main>  
+    <script src="JavaScript/scripts.js"></script>
 </body>
-<script src="JavaScript/scripts.js"></script>
 </html>
-
