--- a/sisben.html
+++ b/sisben.html
@@ -27,16 +27,16 @@
     <main>
         <section id="instrucciones">
             <h2>Instrucciones</h2>
-            <h3>paso 1.</h3>
-            <h3>Abre la pagina <a href="https://www.sisben.gov.co/Paginas/consulta-tu-grupo.html" target="_blank">https://www.sisben.gov.co/Paginas/consulta-tu-grupo.html</a>.</h3>
-            <h3>paso 2.<br> Se baja en la pagina hasta que se encuentre con esto<br><br>Después se selecciona el tipo de documento del cliente (número 1)<br><br>Después se ingresa el número de identificación del cliente (número 2)<br><br> Por ultimo se da click en "Consultar" (número 3)</h3>
-            <img src="img/pics/capS1.png" height="600px" width="1000px">
-            <h3>paso 3.<br>Se baja hasta encontrar ese logo y se da click en el botón señalado</h3>
-            <img src="img/pics/capS2.png" height="600px" width="1000px">
-            <h3>Paso 4.<br>Aparece esto y se selecciona si es a color o blanco y negro (número 1) <br><br> Por ultimo se da click en imprimir (número 2)</h3>
-            <img src="img/pics/capS3.png" height="600px" width="1000px">
+            <h3>Paso 1.</h3>
+            <h3>Abre la página <a href="https://www.sisben.gov.co/Paginas/consulta-tu-grupo.html" target="_blank">https://www.sisben.gov.co/Paginas/consulta-tu-grupo.html</a>.</h3>
+            <h3>Paso 2.<br> Baja en la página hasta que encuentres esto:<br><br>Selecciona el tipo de documento del cliente (número 1)<br><br>Ingresa el número de identificación del cliente (número 2)<br><br>Por último, haz clic en "Consultar" (número 3)</h3>
+            <img src="img/pics/capS1.png" height="600px" width="1000px" alt="Paso 2">
+            <h3>Paso 3.<br>Baja hasta encontrar este logo y haz clic en el botón señalado</h3>
+            <img src="img/pics/capS2.png" height="600px" width="1000px" alt="Paso 3">
+            <h3>Paso 4.<br>Aparece esto y selecciona si es a color o blanco y negro (número 1) <br><br>Por último, haz clic en imprimir (número 2)</h3>
+            <img src="img/pics/capS3.png" height="600px" width="1000px" alt="Paso 4">
         </section>
-    </main>  
+    </main>
+    <script src="JavaScript/scripts.js"></script>
 </body>
-<script src="JavaScript/scripts.js"></script>
 </html>
