--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   </header>
 
   <div class="slider">
-  <a href="/antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesP.png" alt="Certificado de Antecedentes Policía"></a> 
-  <a href="/antecedentesPr.html"><img class="slider-img" src="img/slider/AntecedentesP.jpg" alt="Certificado de Antecedentes Procuraduría"></a> 
-  <a href="/antecedentesC.html"><img class="slider-img" src="img/slider/antecedentesC.png" alt="Certificado de Antecedentes Contraloría"></a>
-  <a href="/sisben.html"><img class="slider-img" src="img/slider/sisben.png" alt="Certificado de Sisben"></a> 
-  <a href="/adres.html"><img class="slider-img" src="img/slider/adres.png" alt="Certificado de Adres o Fosyga"></a>
-  <a href="/ruaf.html"><img class="slider-img" src="img/slider/ruaf.png" alt="Certificado de Ruaf"></a>
+  <a href="antecedentesP.html"><img class="slider-img" src="img/slider/antecedentesP.png" alt="Certificado de Antecedentes Policía"></a> 
+  <a href="antecedentesPr.html"><img class="slider-img" src="img/slider/AntecedentesP.jpg" alt="Certificado de Antecedentes Procuraduría"></a> 
+  <a href="antecedentesC.html"><img class="slider-img" src="img/slider/antecedentesC.png" alt="Certificado de Antecedentes Contraloría"></a>
+  <a href="sisben.html"><img class="slider-img" src="img/slider/sisben.png" alt="Certificado de Sisben"></a> 
+  <a href="adres.html"><img class="slider-img" src="img/slider/adres.png" alt="Certificado de Adres o Fosyga"></a>
+  <a href="ruaf.html"><img class="slider-img" src="img/slider/ruaf.png" alt="Certificado de Ruaf"></a>
   </div>
 
   <script src="JavaScript/scripts.js"></script>
